<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AlbumFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/album_bts"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/logoblack"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namealbum"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/albumbts"
                    android:text="@string/bio_bts"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/albumtext"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namealbum2"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/albumbts2"
                        android:text="@string/bio_bts"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/albumtext2"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namealbum3"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/albumbts3"
                        android:text="@string/bio_bts"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/albumtext3"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namealbum4"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/albumbts4"
                        android:text="@string/bio_bts"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/albumtext4"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namealbum5"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/albumbts5"
                        android:text="@string/bio_bts"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/albumtext5"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namealbum6"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/albumbts6"
                        android:text="@string/bio_bts"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/albumtext6"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>